# trust2-contract

./: .gitignore  Cargo.toml  README.md  build.sh  justfile  rust-toolchain.toml
.git-hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
cargo-verify/: Cargo.toml
cargo-verify/src/: lib.rs  llbc_to_whyml.rs  main.rs  rust_to_llbc.rs  spec_lower.rs  whyml_verify.rs
cargo-verify/src/llbc_to_whyml/: builder.rs  name_map.rs
cargo-verify/src/llbc_to_whyml/whyml_lib/: bool.mlw  builtin.mlw  char.mlw  ext.conf  ext.drv  i128.mlw  i16.mlw  i32.mlw  i64.mlw  i8.mlw  u128.mlw  u16.mlw  u32.mlw  u64.mlw  u8.mlw
cargo-verify/src/spec_ast/: mod.rs  render.rs
cargo-verify/src/spec_lower/: builder.rs  closure.rs  errors.rs  lower.rs  mod.rs  naming.rs  tests.rs
charon/: charon.opam  dune-project
charon-bin-interface/: Cargo.toml
charon-driver/: Cargo.toml
charon-driver-bin-interface/: Cargo.toml
charon/charon/: Cargo.toml
charon/charon-ml/src/: GAst.ml  GAstOfJson.ml  GAstUtils.ml  LlbcAst.ml  LlbcAstUtils.ml  LlbcOfJson.ml  NameMatcher.ml  OfJson.ml  OfPostcard.ml  Print.ml  PrintExpressions.ml  PrintFmt.ml  PrintGAst.ml  PrintLlbcAst.ml  PrintTypes.ml  PrintUllbcAst.ml  PrintUtils.ml  Substitute.ml  UllbcAst.ml  UllbcOfJson.ml
charon/charon-ml/tests/: Test_NameMatcher.ml
charon/charon/src/ast/: expressions.rs  gast.rs  gast_utils.rs  krate.rs  llbc_ast.rs  mod.rs  spec_ast.rs  types.rs  types_utils.rs  ullbc_ast.rs  ullbc_ast_utils.rs  visitor.rs
charon/charon/src/ast/spec_ast/: render.rs
charon/charon/src/export/: multi_target.rs
charon/charon/src/pretty/: fmt_with_ctx.rs
charon/charon/src/transform/: collect_specs.rs  ctx.rs  mod.rs  typecheck_and_unify.rs
charon/charon/src/transform/add_missing_info/: recover_body_comments.rs  reorder_decls.rs
charon/charon/src/transform/collect_specs/: non_body.rs  unstructured_body.rs
charon/charon/src/transform/control_flow/: ullbc_to_llbc.rs
charon/charon/src/transform/normalize/: expand_associated_types.rs  partial_monomorphization.rs
charon/charon/src/transform/simplify_output/: index_to_function_calls.rs  lower_specs_to_ast.rs  remove_adt_clauses.rs  remove_nops.rs  remove_unused_clauses.rs  remove_unused_locals.rs  unbind_item_vars.rs
charon/charon/tests/: cargo.rs  cli.rs  crate_data.rs  ui.rs
charon/charon/tests/cargo/: error-dependencies.out  trust2-contract-sample.out
charon/charon/tests/cargo/trust2-contract-sample/: Cargo.toml
charon/charon/tests/cargo/trust2-contract-sample/src/: lib.rs
charon/charon/tests/ui/: desugar_drops_to_calls_mono.out  issue-967-mismatched-generics.out  ml-mono-name-matcher-tests.out
charon/charon/tests/ui/monomorphization/: dyn-trait.out  generic-method.out  issue-708-from-str-mismatched-generics.out  issue-722-poly-items-in-names.out  rec-adt.out  simpl-trait-assoc-types-2.out  simple-trait-assoc-types-3.out  simple-trait-assoc-types.out  simple-trait-generics-2.out  simple-trait-generics-assoc-2.out  simple-trait-generics-assoc.out  simple-trait-generics.out  simple-trait-two-methods.out  simple_trait.out  trait_impls.out  trait_impls_ullbc.out  vtable-blanket-impl.out  vtable-lifetime-impl.out  vtable-ref-impl.out
charon/charon/tests/ui/regressions/: issue-1236-vtable-fn-ptr.out
charon/charon/tests/ui/simple/: hello-world.out
proc-macro-crate/src/: lib.rs
src/: internal.rs  lib.rs
tests/: simple.rs
trust2-contract/: Cargo.toml
trust2-contract-macros/: Cargo.toml
trust2-contract-macros/src/: impl.rs  lib-dummy.rs  lib-impl.rs  lib.rs
trust2-contract-macros/src/impl/: parse.rs
trust2-contract-verifier/: dune-project  trust2-contract-verifier.opam
trust2-contract-verifier/lib/: dune
trust2-contract-verifier/test/: dune
trust2-contract/src/: internal.rs  lib.rs  prelude.rs
trust2-contract/tests/: simple.rs
utils/: Cargo.toml
utils/src/: cargo.rs  case.rs  lib.rs  yansi.rs
