[package]
name = "cargo-verify"
version = "0.1.0"
edition = "2024"

[dependencies]
charon = { path = "../charon/charon" }
charon-bin-interface = { path = "../charon-bin-interface" }
charon-driver-bin-interface = { path = "../charon-driver-bin-interface" }
proc-macro-crate = { path = "../proc-macro-crate" }
utils = { path = "../utils" }

anyhow = "1.0.102"
clap = { version = "4.5.50", features = ["derive"] }
clap-cargo = "0.18.3"
tempfile = "3.24.0"
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
