[package]
name = "trust2-contract-macros"
version = "0.1.0"
edition = "2024"

[features]
verify = []

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
syn = { version = "2.0.106", default-features = false, features = ["extra-traits"] }
